--- a/All Project Code & Components/src/views/pages/home.ejs
+++ b/All Project Code & Components/src/views/pages/home.ejs
@@ -30,10 +30,16 @@
                                         <div class="d-flex align-items-center" style="padding-bottom: 12px;">
                                             <img src="<%= post.profile_picture %>" width="32px" height="32px"
                                                 style="border-radius: 50%; margin-right: 10px;">
-                                            <h2
-                                                style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
-                                                <%= post.username %>
-                                            </h2>
+                                            <div class="d-flex flex-column" style="align-items: flex-start;">
+                                                <h2
+                                                    style="font-size: 20px; font-style: normal; font-weight: 600; line-height: 1; margin: 0px; padding: 0px;">
+                                                    <%= post.display_name %>
+                                                </h2>
+                                                <h2
+                                                    style="font-size: 12px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px;">
+                                                    @<%= post.username %>
+                                                </h2>
+                                            </div>
                                         </div>
                                         <div>
                                             <p
