--- a/All Project Code & Components/src/views/pages/register.ejs
+++ b/All Project Code & Components/src/views/pages/register.ejs
@@ -10,27 +10,39 @@
         </h2>
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control input" name="email" placeholder="name@example.com">
+          <input type="email" class="form-control input" name="email">
+        </div>
+
+        <div class="mb-3">
+          <label for="displayName" class="form-label">Display Name</label>
+          <input type="text" class="form-control input" name="displayName">
         </div>
 
         <div class="mb-3">
           <label for="username" class="form-label">User Name</label>
-          <input type="text" class="form-control input" name="username" placeholder="create your user name">
+          <input type="text" class="form-control input" id="username" name="username">
         </div>
 
+        <script>
+          document.getElementById('username').addEventListener('input', function (e) {
+            // Replace spaces with an empty string
+            e.target.value = e.target.value.replace(/\s/g, '');
+          });
+        </script>
 
         <div class="mb-3">
           <label for="password1" class="form-label">Password</label>
-          <input type="password" name="password1" class="form-control input" aria-describedby="passwordHelpBlock">
+          <input type="password" name="password1" class="form-control input" minlength="8" maxlength="20"
+            aria-describedby="passwordHelpBlock">
           <div id="passwordHelpBlock" class="form-text">
             Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
-            special characters, or emoji.
+            special characters, or emojis.
           </div>
         </div>
 
         <div class="mb-3">
           <label for="password2" class="form-label">Confirm Password</label>
-          <input type="password" name="password2" class="form-control input">
+          <input type="password" name="password2" class="form-control input" minlength="8" maxlength="20">
         </div>
 
         <hr class="solid" style="border-top: 2px solid #bbb;">
