--- a/All Project Code & Components/src/views/pages/home.ejs
+++ b/All Project Code & Components/src/views/pages/home.ejs
@@ -8,8 +8,8 @@
                     <% if (typeof posts !=="undefined" ) { %>
                         <% posts.forEach(post=> { %>
                             <div class="col-12">
-                                <div class="container"
-                                    style="position: relative; max-width: 390px; width: 100%; height: fit-content; padding: 0px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0);">
+                                <div class="container box-shadow"
+                                    style="position: relative; max-width: 390px; width: 100%; height: fit-content; padding: 0px;">
                                     <div class="col"
                                         style="width: 100%; height: fit-content; border-color: black; border-width: 1px; border-style: solid; padding: 12px;">
                                         <h2
