--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -16,30 +16,25 @@
                     <img src="<%= user.profile_picture %>" alt="profile picture"
                       style="width: 80px; height: auto; border-radius: 50%;">
                     <div class="d-flex flex-column" style="align-items: flex-start;">
-                      <h1
-                        style="font-size: 40px; font-style: normal; font-weight: 700; line-height: noprmal; margin: 0px; padding: 0px; padding-left: 20px;">
+                      <h1 style="padding-left: 20px;">
                         <%= user.display_name %>
                       </h1>
-                      <h1
-                        style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px; padding-left: 20px;">
+                      <h2 style="padding-left: 20px;">
                         @<%= user.username %>
-                      </h1>
+                          </h1>
                     </div>
                   </div>
                   <div class="col-6 d-flex" style="align-items: flex-start; padding-top: 20px;">
-                    <h2
-                      style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px; padding-left: 40px;">
+                    <h2 style="padding-left: 40px;">
                       Followers: <%= user.followers %>
                     </h2>
-                    <h2
-                      style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px; padding-left: 40px;">
+                    <h2 style="padding-left: 40px;">
                       Following: <%= user.following %>
                     </h2>
                   </div>
                 </div>
                 <div style="width: 50%">
-                  <p
-                    style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; padding-top: 20px;">
+                  <p style="color: black; padding-top: 20px;">
                     <%= user.bio %>
                   </p>
                 </div>
@@ -48,8 +43,7 @@
               <div class="row" style="margin-top: 32px;">
                 <!-- Top Songs -->
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <h1
-                    style="font-size: 40px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                  <h1>
                     Top Songs</h1>
                   <% topTracks.items.forEach(function(song) { %>
                     <div class="col" style="width: 90%; border-color: black; border-width: 1px; border-style: solid; padding:
@@ -59,14 +53,12 @@
                           <img src="<%= song.album.images[0].url %>" alt="Album cover"
                             style="width: 80px; height: auto;">
                           <div style="padding-left: 20px;">
-                            <h1
-                              style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                            <h2>
                               <%= song.name %>
-                            </h1>
-                            <h2
-                              style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; margin-top: 8px;">
-                              <%= song.artists[0].name %>
                             </h2>
+                            <h3 style="font-size: 14px; margin-top: 8px;">
+                              <%= song.artists[0].name %>
+                            </h3>
                           </div>
                         </div>
                         <div class="d-flex align-items-center" style="width: 60px; height: 60px;">
@@ -86,8 +78,7 @@
                 </div>
                 <!-- Top Artists -->
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <h1
-                    style="font-size: 40px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                  <h1>
                     Top Artists</h1>
                   <% topArtists.items.forEach(function(artist) { %>
                     <div class="col" style="width: 90%; border-color: black; border-width: 1px; border-style: solid; padding:
@@ -96,14 +87,12 @@
                         <div class="d-flex align-items-center">
                           <img src="<%= artist.images[0].url %>" alt="Album cover" style="width: 80px; height: auto;">
                           <div style="padding-left: 20px;">
-                            <h1
-                              style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                            <h2>
                               <%= artist.name %>
-                            </h1>
-                            <h2
-                              style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; margin-top: 8px;">
-                              <%= artist.genres.join(', ') %>
                             </h2>
+                            <h3 style="font-size: 14px; margin-top: 8px;">
+                              <%= artist.genres.join(', ') %>
+                            </h3>
                           </div>
                         </div>
                         <div class="d-flex align-items-center" style="width: 60px; height: 60px;">
