--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -23,6 +23,21 @@
                         @<%= user.username %>
                           </h1>
                     </div>
+                    <% if (ownProfile == false) { %>
+                      <% if (isfollowing == false) {%>
+                        <form action="/user/follow/<%= user.user_id %>" method="post">
+                            <button type="submit" style="margin-left: 20px;">
+                                follow
+                            </button>
+                        </form>
+                        <% } else { %>
+                        <form action="/user/unfollow/<%= user.user_id %>" method="post">
+                            <button type="submit" style="margin-left: 20px;">
+                                unfollow
+                            </button>
+                        </form>
+                        <% } %>
+                      <% } %>
                   </div>
                   <div class="col-6 d-flex" style="align-items: flex-start; padding-top: 20px;">
                     <h2 style="padding-left: 40px;">
