--- a/All Project Code & Components/src/resources/css/style.css
+++ b/All Project Code & Components/src/resources/css/style.css
@@ -76,6 +76,25 @@ textarea {
   margin: 0;
   padding: 0;
 }
+textarea.display-name {
+  color: #000;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+  padding: 0;
+}
+
+textarea.bio {
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+  padding: 0;
+}
 
 .post-button {
   color: #000;
